# IntelliM

./: .gitignore  Readme.md  trends_data.csv
data-pipeline/crawler/: file.txt  main.py  model.py  pipeline.py  pyproject.toml
data-pipeline/crawler/classifier/: classified_queues.py  page_classifier.py  page_types.py
data-pipeline/crawler/config/seed_configs/: cameras.json  earphones.json  laptops.json  portable_speakers.json  settings.py  smartphones.json  smartwatches.json  tablets.json
data-pipeline/crawler/crawl_queue/: context_tracker.py  priority_router.py  queue_manager.py  request_models.py
data-pipeline/crawler/crawler/: base_crawler.py  context_propagator.py  domain_scope_guard.py  link_extractor.py  pagination_discoverer.py  url_fetcher.py
data-pipeline/crawler/queue/: priority_router.py  queue_manager.py
data-pipeline/crawler/seeds/: base_seed.py  seed_loader.py
data-pipeline/crawler/storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_0.__metadata__.json  __RQ_STATE_3L7FcfWGggcKOprsS  __RQ_STATE_3L7FcfWGggcKOprsS.__metadata__.json  __metadata__.json
data-pipeline/crawler/storage/request_queues/default/: 007c3f097deca8c.json  00ccb0b46c18b5d.json  02194572d40e60b.json  021eade884ff986.json  02e2cd62540a2e2.json  03564f5862810f6.json  03566ab18ab2979.json  04e733b8dd81993.json  053e74d9afbd793.json  05771b40638f746.json  05acd892df99281.json  05af9e4a6453004.json  05cda65881bb475.json  05fc33c0562eacb.json  061651adee9a8da.json  066c321b9bf840a.json  0679638be9bf1fe.json  0692517947e9c89.json  06c83dbac073d17.json  07198c5079b6fec.json  0728a19da43738d.json  07872a613fa1bf4.json  07cfa6db9fdd826.json  08b654ad008f2c0.json  0a21a4112a22698.json  0a413dd23439e85.json  0a5fcb4c81665ca.json  (+915 more)
data-pipeline/processor/: main.py  models.py  pipeline.py  pyproject.toml
data-pipeline/processor/deduplicator/: __init__.py  dedup_engine.py  fingerprinter.py
data-pipeline/processor/hierarchy/: __init__.py  hierarchy_builder.py  hierarchy_exporter.py
data-pipeline/processor/sku_mapper/: __init__.py  sku_builder.py  sku_registry.py
data-pipeline/scraper/: main.py  models.py  pipeline.py  pyproject.toml
data-pipeline/scraper/classifier/: __init__.py  content_classifier.py
data-pipeline/scraper/cleaner/: __init__.py  price_cleaner.py  rating_cleaner.py  text_cleaner.py
data-pipeline/scraper/normalizer/: __init__.py  ad_normalizer.py  product_normalizer.py  review_normalizer.py  trend_normalizer.py
data-pipeline/scraper/output/: ads.jsonl  products.jsonl  trends.jsonl  unclassified.jsonl
data-pipeline/scraper/parser/: __init__.py  ad_parser.py  html_parser.py  product_parser.py  review_parser.py  trend_parser.py
data-pipeline/scraper/storage/: __init__.py  jsonl_writer.py
(+35 files in other folders)
