[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler-pipeline"
version = "0.1.0"
description = "Portable electronics competitor tracking crawler"
requires-python = ">=3.11"
dependencies = [
    "crawlee[playwright]>=0.6.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "tldextract>=5.1.2",
    "loguru>=0.7.2",
    "orjson>=3.10.3",
    "tenacity>=8.3.0",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.24.0",
]

[project.scripts]
crawl = "main:main"

[tool.setuptools.packages.find]
where = ["."]