[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-pipeline"
version = "0.1.0"
description = "HTML scraping, parsing, cleaning, classification, and normalization pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "selectolax>=0.3.21",
    "orjson>=3.10.3",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
scrape = "main:main"

[tool.setuptools.packages.find]
where = ["."]
